# Modules/EquipmentModels/app/Presentation/Http/Resources/EquipmentModelResource.php
@@ -1,0 +1,24 @@
+<?php
+
+namespace Modules\EquipmentModels\Presentation\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class EquipmentModelResource extends JsonResource
+{
+    /**
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'name' => $this->name,
+            'brand' => $this->brand,
+            'model' => $this->model,
+            'created_at' => $this->created_at,
+            'updated_at' => $this->updated_at,
+        ];
+    }
+}
